Added meta data

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,19 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="A gallery of pictures from recent years built with react."
+    />
+    <meta name="title" property="og:title" content="Gallery of my Life" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="" />
+    <meta
+      name="description"
+      property="og:description"
+      content="A gallery of pictures from recent years built with react."
+    />
+    <meta name="author" content="Vada Karlen" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -42,5 +55,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div id="footer">
+      <a href="https://github.com/vkarlen/react-gallery">GitHub Repo</a>
+    </div>
   </body>
 </html>
